@@ -1,0 +1,9 @@
+<?php
+/**
+ * @package Include/help/ja
+ */
+?>
+<h1>Pandora FMS におけるカテゴリ</h1>
+
+カテゴリはシステム上で設定され、選択されたモジュールに割り当てられます。<br>
+管理者のみが、カテゴリを作成したり編集したりできます。属するカテゴリに応じてモジュールを操作するのに利用できます。
