@@ -4,5 +4,13 @@
 ?>
 
 <p>
-インベントリは、モニタリングしているサーバのデバイスのリストを表示します。これにより、サーバの CPU、RAM、パッチ、ソフトウエアなどの情報を得ることができます。
+インベントリは、モニタリングしているサーバのデバイスのリストを表示します。これにより、サーバの CPU、RAM、パッチ、ソフトウエアなどの情報を得ることができます。<br><br>
+以下に、インベントリモジュールを追加する場合に入力するフィールドについて説明します。<br>
+    <ul><b>モジュール(Module):</b> 追加したいインベントリモジュールを選択します。エージェントの OS にマッチしたモジュールのみ表示されます。</ul>
+    <ul><b>対象(Target):</b> インベントリを取得したい対象の IP アドレスまたはサーバ名です。</ul>
+    <ul><b>間隔(Interval):</b> インベントリモジュールの実行間隔を選択します。</ul>
+    <ul><b>ユーザ名(Username):</b> インベントリモジュールを実行するユーザです。</ul>
+    <ul><b>パスワード(Password):</b> インベントリモジュールを実行するユーザのパスワードです。</ul>
+
+<p>モジュールを更新した場合、"すべて更新" をクリックすると全てのモジュールに適用されます。
 </p>
