@@ -1,3 +1,9 @@
+2013-04-04  Junichi Satoh  <junichi@rworks.jp>
+
+	* include/help/ja/help_inventory_tab.php: Updated help.
+
+	* include/help/ja/help_categories.php: Added a new help file.
+
 2013-04-03  Junichi Satoh  <junichi@rworks.jp>
 
 	* godmode/alerts/alert_actions.php: Fixed that any groups are shown
